# HP_HTTP_Server

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md
.VSCodeCounter/2026-04-13_11-54-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: Epoller.cpp.A33072087E4147B6.idx  Epoller.h.77922BA55C637F50.idx  HttpRequest.cpp.6664EA48B7FDC635.idx  HttpRequest.h.EB3E2AE9F80E6AB9.idx  HttpResponse.cpp.CEB148DEDCC929CD.idx  HttpResponse.h.095EC21DBFCB46D8.idx  HttpServer.cpp.6340998B50F3D786.idx  HttpServer.h.8BE346F751274DFB.idx  InetAddress.cpp.A5028C6AE76BF5F4.idx  InetAddress.h.3615CCA8494560B9.idx  Logger.cpp.185BC632750DA5BF.idx  Logger.h.36CBAAA8536CB2A9.idx  NonCopyable.h.7B280ECB62BC9209.idx  Socket.cpp.73D254512618CED5.idx  Socket.h.39E085EF8013D112.idx  TcpServer.cpp.B54635FB09BA0C8C.idx  TcpServer.h.F0E4A36962F5E001.idx  http_request_test.cpp.FAD9F0C23DAB1E80.idx  http_response_test.cpp.3FC73EFAA025E794.idx  main.cpp.9A9BF811295CED70.idx  static_file_test.cpp.D7B6E64CA60D9502.idx
app/: main.cpp
docs/: DESIGN_BACKLOG.md  M1_DESIGN.md
docs/builder/: M1_DESIGN.md  M1_TEST_REPORT.md  TEST_LOG_GUIDE.md
docs/reviewer/: M1_REVIEW_GUIDE.md  M1_REVIEW_REPORT_20260411_1436_half_close.md
include/base/: Logger.h  NonCopyable.h  logger.h  non_copyable.h
include/http/: HttpRequest.h  HttpResponse.h  HttpServer.h  http_request.h  http_response.h  http_server.h
include/net/: Epoller.h  InetAddress.h  Socket.h  TcpServer.h  epoller.h  inet_address.h  socket.h  tcp_server.h
public/: 404.html  index.html  style.css
src/base/: Logger.cpp  logger.cpp
src/http/: HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  http_request.cpp  http_response.cpp  http_server.cpp
src/net/: Epoller.cpp  InetAddress.cpp  Socket.cpp  TcpServer.cpp  epoller.cpp  inet_address.cpp  socket.cpp  tcp_server.cpp
tests/: CMakeLists.txt  http_request_test.cpp  http_response_test.cpp  smoke_test.sh  static_file_test.cpp
